@@ -1,5 +1,5 @@
 include("static_data.lua")
-
+DB.privcache = {}
 function DB.Init()
 	sql.Begin()
 		sql.Query("CREATE TABLE IF NOT EXISTS darkrp_tspawns('map' TEXT NOT NULL, 'team' INTEGER NOT NULL, 'x' NUMERIC NOT NULL, 'y' NUMERIC NOT NULL, 'z' NUMERIC NOT NULL, PRIMARY KEY('map', 'team'));")
@@ -113,42 +113,24 @@ function DB.Priv2Text(priv)
 end
 
 function DB.HasPriv(ply, priv)
+	//print("DOES PLAYER HAVE PRIV?", ply, priv)
 	if priv == ADMIN and (ply:EntIndex() == 0 or ply:IsAdmin()) then return true end
 
 	local p = DB.Priv2Text(priv)
 	if not p then return false end
 
 	-- If there is a current cache of priveleges
-	if DB.privcache then
-		-- If there is a cache structure for this user
-		if DB.privcache[ply:SteamID()] then
-				-- If the cache indicates that they have the privilege
-			if DB.privcache[ply:SteamID()][priv] == 1 then
-				return true
-			else
-				return false
-			end
-		-- If there is no cache for this user
+	if DB.privcache[ply:SteamID()] then
+			-- If the cache indicates that they have the privilege
+		if DB.privcache[ply:SteamID()][priv] == 1 then
+			return true
 		else
-			-- Find out whether they have this privelege
-			local result = tonumber(sql.QueryValue("SELECT " .. sql.SQLStr(p) .. " FROM darkrp_privs WHERE steam = " .. sql.SQLStr(ply:SteamID()) .. ";"))
-
-			DB.privcache[ply:SteamID()] = {}
-
-			-- Create cache entries based on the database status
-			if result == 1 then
-				DB.privcache[ply:SteamID()][priv] = 1
-				return true
-			else
-				DB.privcache[ply:SteamID()][priv] = 0
-				return false
-			end
+			return false
 		end
-	-- If the cache is nonexistent
+	-- If there is no cache for this user
 	else
 		local result = tonumber(sql.QueryValue("SELECT " .. sql.SQLStr(p) .. " FROM darkrp_privs WHERE steam = " .. sql.SQLStr(ply:SteamID()) .. ";"))
-
-		DB.privcache = {}
+		//print("RESULT = ", result)
 		DB.privcache[ply:SteamID()] = {}
 
 		if result == 1 then
@@ -164,18 +146,23 @@ end
 function DB.GrantPriv(ply, priv)
 	local steamID = ply:SteamID()
 	local p = DB.Priv2Text(priv)
-	ply:SetNWBool("Priv"..p, true)
 	if not p then return false end
+	ply:SetNWBool("Priv"..p, true)
 	if tonumber(sql.QueryValue("SELECT COUNT(*) FROM darkrp_privs WHERE steam = " .. sql.SQLStr(steamID) .. ";")) > 0 then
 			sql.Query("UPDATE darkrp_privs SET " .. p .. " = 1 WHERE steam = " .. sql.SQLStr(steamID) .. ";")
 	else
 			sql.Begin()
 			sql.Query("INSERT INTO darkrp_privs VALUES(" .. sql.SQLStr(steamID) .. ", 0, 0, 0, 0, 0, 0);")
 			sql.Query("UPDATE darkrp_privs SET " .. p .. " = 1 WHERE steam = " .. sql.SQLStr(steamID) .. ";")
+			
 			sql.Commit()
+			//print(sql.QueryValue("SELECT " .. p .. " FROM darkrp_privs WHERE steam = " .. steamID .. ";"))
 	end
-	-- privelege structure altered, regenerate cache on lookups
-	DB.privcache = nil
+	-- privelege structure altered, fix the goddamn cache
+	if not DB.privcache[steamID] then
+		DB.privcache[steamID] = {}
+	end
+	DB.privcache[steamID][priv] = 1
 	return true
 end
 
@@ -187,8 +174,11 @@ function DB.RevokePriv(ply, priv)
 	if not p or val < 1 then return false end
 	sql.Query("UPDATE darkrp_privs SET " .. p .. " = 0 WHERE steam = " .. sql.SQLStr(steamID) .. ";")
 	
-	-- privelege structure altered, regenerate cache on lookups
-	DB.privcache = nil
+	-- privelege structure altered, alter the cache
+	if not DB.privcache[steamID] then
+		DB.privcache[steamID] = {}
+	end
+	DB.privcache[steamID][priv] = 0
 	return true
 end
 
